@@ -2,15 +2,15 @@ TEMPLATE = subdirs
 
 !android {
 SUBDIRS = \
-    qmidiplayer-desktop \
-    qmidiplayer-lite \
-    sample-plugin \
-    visualization
+	qmidiplayer-desktop \
+	qmidiplayer-lite \
+	sample-plugin \
+	visualization \
+	midifmt-plugin
 }
 android {
 SUBDIRS = \
-    qmidiplayer-lite
+	qmidiplayer-lite
 }
 
 SUBDIRS += \
-    midifmt-plugin
