@@ -1,3 +1,11 @@
+2017-02-13 0.8.5 indev
+Fix pitch bend range handling.
+Allow registering a string option as file path.
+Provide an easier way to set path values in options.
+Revert to old geometry storage mechanism and improved
+it. Hope this one will work on Windows.
+Make the time slider less ugly.
+
 2017-02-12 0.8.5 indev
 UI revolution cont'd. Powered by @BLumia.
 Expose new APIs to plugin developer.
